@@ -1,13 +1,16 @@
 package com.beaverteeth.telegram.service;
 
+import com.beaverteeth.telegram.model.dto.DoctorDto;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
-import org.springframework.http.ResponseEntity;
+import org.springframework.core.ParameterizedTypeReference;
+import org.springframework.http.HttpMethod;
 import org.springframework.stereotype.Service;
 import org.springframework.web.client.RestTemplate;
 
-import java.util.*;
+import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -19,70 +22,62 @@ public class DoctorApiClient {
     @Value("${doctor.service.url:http://localhost:8081}")
     private String doctorServiceUrl;
 
-    @SuppressWarnings("unchecked")
-    public List<Map<String, Object>> getAllActiveDoctors() {
+    public List<DoctorDto> getAllActiveDoctors() {
         try {
             String url = doctorServiceUrl + "/api/doctors";
             log.info("Запрос всех врачей: {}", url);
 
-            ResponseEntity<Map[]> response = restTemplate.getForEntity(url, Map[].class);
+            List<DoctorDto> allDoctors = restTemplate.exchange(
+                    url,
+                    HttpMethod.GET,
+                    null,
+                    new ParameterizedTypeReference<List<DoctorDto>>() {}
+            ).getBody();
 
-            if (response.getBody() != null) {
-                List<Map<String, Object>> activeDoctors = new ArrayList<>();
-
-                for (Map<String, Object> doctor : response.getBody()) {
-                    Boolean isActive = (Boolean) doctor.get("isActive");
-                    if (isActive != null && isActive) {
-                        activeDoctors.add(doctor);
-                    }
-                }
-
-                return activeDoctors;
+            if (allDoctors != null) {
+                return allDoctors.stream()
+                        .filter(doctor -> doctor.getIsActive() != null && doctor.getIsActive())
+                        .collect(Collectors.toList());
             }
 
         } catch (Exception e) {
             log.error("Ошибка при получении списка врачей: {}", e.getMessage());
         }
 
-        return Collections.emptyList();
+        return List.of();
     }
 
-    @SuppressWarnings("unchecked")
-    public List<Map<String, Object>> getDoctorsBySpecialty(String specialty) {
+    public List<DoctorDto> getDoctorsBySpecialty(String specialty) {
         try {
             String url = doctorServiceUrl + "/api/doctors/specialty/" + specialty;
             log.info("Запрос врачей по специализации {}: {}", specialty, url);
 
-            ResponseEntity<Map[]> response = restTemplate.getForEntity(url, Map[].class);
+            List<DoctorDto> doctors = restTemplate.exchange(
+                    url,
+                    HttpMethod.GET,
+                    null,
+                    new ParameterizedTypeReference<List<DoctorDto>>() {}
+            ).getBody();
 
-            if (response.getBody() != null) {
-                List<Map<String, Object>> activeDoctors = new ArrayList<>();
-
-                for (Map<String, Object> doctor : response.getBody()) {
-                    Boolean isActive = (Boolean) doctor.get("isActive");
-                    if (isActive != null && isActive) {
-                        activeDoctors.add(doctor);
-                    }
-                }
-
-                return activeDoctors;
+            if (doctors != null) {
+                return doctors.stream()
+                        .filter(doctor -> doctor.getIsActive() != null && doctor.getIsActive())
+                        .collect(Collectors.toList());
             }
 
         } catch (Exception e) {
             log.error("Ошибка при получении врачей по специализации {}: {}", specialty, e.getMessage());
         }
 
-        return Collections.emptyList();
+        return List.of();
     }
 
-    @SuppressWarnings("unchecked")
-    public Map<String, Object> getDoctorById(Long doctorId) {
+    public DoctorDto getDoctorById(Long doctorId) {
         try {
             String url = doctorServiceUrl + "/api/doctors/" + doctorId;
             log.info("Запрос врача по ID {}: {}", doctorId, url);
 
-            ResponseEntity<Map> response = restTemplate.getForEntity(url, Map.class);
-            return response.getBody();
+            return restTemplate.getForObject(url, DoctorDto.class);
 
         } catch (Exception e) {
             log.error("Ошибка при получении врача по ID {}: {}", doctorId, e.getMessage());
@@ -92,28 +87,22 @@ public class DoctorApiClient {
 
     public Long findDoctorIdByLastName(String lastName) {
         try {
-            // Используем новый эндпоинт для поиска
             String url = doctorServiceUrl + "/api/doctors/search?lastName=" + lastName;
             log.info("Поиск врача по фамилии через API: {}", lastName);
 
-            ResponseEntity<Map[]> response = restTemplate.getForEntity(url, Map[].class);
-            Map<String, Object>[] doctors = response.getBody();
+            List<DoctorDto> doctors = restTemplate.exchange(
+                    url,
+                    HttpMethod.GET,
+                    null,
+                    new ParameterizedTypeReference<List<DoctorDto>>() {}
+            ).getBody();
 
-            if (doctors != null && doctors.length > 0) {
-                // Возвращаем ID первого найденного врача
-                for (Map<String, Object> doctor : doctors) {
-                    Boolean isActive = (Boolean) doctor.get("isActive");
-                    if (isActive != null && isActive) {
-                        Object id = doctor.get("id");
-                        if (id instanceof Integer) {
-                            return ((Integer) id).longValue();
-                        } else if (id instanceof Long) {
-                            return (Long) id;
-                        } else if (id instanceof Number) {
-                            return ((Number) id).longValue();
-                        }
-                    }
-                }
+            if (doctors != null && !doctors.isEmpty()) {
+                return doctors.stream()
+                        .filter(doctor -> doctor.getIsActive() != null && doctor.getIsActive())
+                        .findFirst()
+                        .map(DoctorDto::getId)
+                        .orElse(null);
             }
 
             log.warn("Врач с фамилией {} не найден", lastName);
@@ -125,32 +114,28 @@ public class DoctorApiClient {
         }
     }
 
-    // Дополнительный метод для получения списка врачей
-    @SuppressWarnings("unchecked")
-    public List<Map<String, Object>> searchDoctorsByLastName(String lastName) {
+    public List<DoctorDto> searchDoctorsByLastName(String lastName) {
         try {
             String url = doctorServiceUrl + "/api/doctors/search?lastName=" + lastName;
             log.info("Поиск врачей по фамилии: {}", lastName);
 
-            ResponseEntity<Map[]> response = restTemplate.getForEntity(url, Map[].class);
+            List<DoctorDto> doctors = restTemplate.exchange(
+                    url,
+                    HttpMethod.GET,
+                    null,
+                    new ParameterizedTypeReference<List<DoctorDto>>() {}
+            ).getBody();
 
-            if (response.getBody() != null) {
-                List<Map<String, Object>> activeDoctors = new ArrayList<>();
-
-                for (Map<String, Object> doctor : response.getBody()) {
-                    Boolean isActive = (Boolean) doctor.get("isActive");
-                    if (isActive != null && isActive) {
-                        activeDoctors.add(doctor);
-                    }
-                }
-
-                return activeDoctors;
+            if (doctors != null) {
+                return doctors.stream()
+                        .filter(doctor -> doctor.getIsActive() != null && doctor.getIsActive())
+                        .collect(Collectors.toList());
             }
 
         } catch (Exception e) {
             log.error("Ошибка при поиске врачей по фамилии {}: {}", lastName, e.getMessage());
         }
 
-        return Collections.emptyList();
+        return List.of();
     }
 }
